hphp/hack/test/typecheck/disallow_array/typehint3.php
<?hh // partial

type Foo = array<int>;
